--- a/ChameleonMiniGUI/Languages/Spanish.txt
+++ b/ChameleonMiniGUI/Languages/Spanish.txt
@@ -1,4 +1,4 @@
-锘縞heckBox8.Text=Tag 8
+checkBox8.Text=Tag 8
 checkBox7.Text=Tag 7
 checkBox6.Text=Tag 6
 checkBox5.Text=Tag 5
@@ -11,42 +11,42 @@ btn_selectnone.Text=Deselecc. todo
 btn_selectall.Text=Selecc. todo
 btn_refresh.Text=Actualizar
 btn_clear.Text=Eliminar
-btn_identify.Text=Identify
+btn_identify.Text=Identificar
 btn_keycalc.Text=mfkey32
 btn_apply.Text=Aplicar
 btn_download.Text=Descargar Dump
 btn_upload.Text=Subir Dump
 gb_actions.Text=Acciones Disponibles
-lbl_size6.Text=Tama帽o
-lbl_button6.Text=Bot贸n
+lbl_size6.Text=Tama駉
+lbl_button6.Text=Bot髇
 lbl_uid6.Text=UID
 lbl_mode6.Text=Modo
 lbl_mode1.Text=Modo
-lbl_size1.Text=Tama帽o
+lbl_size1.Text=Tama駉
 lbl_uid1.Text=UID
-lbl_button1.Text=Bot贸n
-lbl_size2.Text=Tama帽o
-lbl_button2.Text=Bot贸n
+lbl_button1.Text=Bot髇
+lbl_size2.Text=Tama駉
+lbl_button2.Text=Bot髇
 lbl_uid2.Text=UID
 lbl_mode2.Text=Modo
-lbl_size4.Text=Tama帽o
-lbl_button4.Text=Bot贸n
+lbl_size4.Text=Tama駉
+lbl_button4.Text=Bot髇
 lbl_uid4.Text=UID
 lbl_mode4.Text=Modo
-lbl_size3.Text=Tama帽o
-lbl_button3.Text=Bot贸n
+lbl_size3.Text=Tama駉
+lbl_button3.Text=Bot髇
 lbl_uid3.Text=UID
 lbl_mode3.Text=Modo
-lbl_size5.Text=Tama帽o
-lbl_button5.Text=Bot贸n
+lbl_size5.Text=Tama駉
+lbl_button5.Text=Bot髇
 lbl_uid5.Text=UID
 lbl_mode5.Text=Modo
-lbl_size7.Text=Tama帽o
-lbl_button7.Text=Bot贸n
+lbl_size7.Text=Tama駉
+lbl_button7.Text=Bot髇
 lbl_uid7.Text=UID
 lbl_mode7.Text=Modo
-lbl_size8.Text=Tama帽o
-lbl_button8.Text=Bot贸n
+lbl_size8.Text=Tama駉
+lbl_button8.Text=Bot髇
 lbl_uid8.Text=UID
 lbl_mode8.Text=Modo
 tpOperation.Text=Operaciones
@@ -68,20 +68,20 @@ chk_keepalive.Text=Enviar estando conectado (Control de Versiones)
 gb_keepalive.Text=Mantengase conectado
 btn_disconnect.Text=Desconectar
 btn_connect.Text=Conectar
-gb_connectionSettings.Text=Estado de Conexi贸n
+gb_connectionSettings.Text=Estado de Conexi髇
 lbl_defaults.Text=Flash del firmware de ChameleonMini RevE rebooted. Debe de estar en modo BOOTLOADER
 lbl_reset.Text=Reiniciar el ChameleonMini, se apaga y reinicia.
 btn_reset.Text=Resetear
-lbl_upgrade.Text=Poner el ChameleonMini en modo actualizaci贸n de firmware (DFU)
+lbl_upgrade.Text=Poner el ChameleonMini en modo actualizaci髇 de firmware (DFU)
 btn_bootmode.Text=Actualizar firmware
 btn_exitboot.Text=Firmware por defecto
 gb_bootloader.Text=Resetear & Opciones de Bootloader
 lbl_defaultdownload.Text=Elija el directorio por defecto para el volcado de las descargas
-gb_defaultdownload.Text=Ubicaci贸n de los dumps descargados
+gb_defaultdownload.Text=Ubicaci髇 de los dumps descargados
 btn_rssirefresh.Text=Refrescar
 lbl_rssi.Text=Actual RSSI
 gb_rssi.Text=RSSI Voltaje
-tpSettings.Text=Configuraci贸n
+tpSettings.Text=Configuraci髇
 gb_output.Text=Salir
 gb_language.Text=Lenguajes && Modelos
 lbl_buttonlong1.Text=Btn Largo
@@ -92,9 +92,9 @@ lbl_buttonlong5.Text=Btn Largo
 lbl_buttonlong6.Text=Btn Largo
 lbl_buttonlong7.Text=Btn Largo
 lbl_buttonlong8.Text=Btn Largo
-btnStartlocation.Text=Abrir ubicaci贸n
+btnStartlocation.Text=Abrir ubicaci髇
 lbl_template.Text=Modelos
-tpUtils.Text=Utils
+tpUtils.Text=Utiles
 #
 # tab Terminal
 #
@@ -106,7 +106,7 @@ btnSerialSend.Text=Enviar
 #
 # tab Dumpmanagement context menu
 #
-toolStripMenuItem1.Text=Toggle Sync Scroll
+toolStripMenuItem1.Text=Alternar Sincron. desplazamiento
 toolStripMenuItem2.Text=Cierra todo
 btn_close1.Text=Cerrar
 btn_close2.Text=Cerrar
